protótipo da página do post

--- a/src/pages/board/board.html
+++ b/src/pages/board/board.html
@@ -15,7 +15,7 @@
       </ion-thumbnail>
       <h2>{{ post.title }}</h2>
       <p>{{ post.resume }}</p>
-      <button ion-button clear item-right>View</button>
+      <button ion-button clear item-right (click)="show(post)">View</button>
     </ion-item>
   </ion-list>
 </ion-content>
